packages/styles/src/components/form-search-input.scss
@use './../functions/tokens';
@use './../tokens/components';
@use './../mixins/utilities';
@use './../mixins/form-input' as form-input-mx;

tokens.$default-map: components.$post-search-input;

.search-input {
  position: relative;

  /* clears the ‘X’ from webkit browsers */
  input[type='search']::-webkit-search-decoration,
  input[type='search']::-webkit-search-cancel-button,
  input[type='search']::-webkit-search-results-button,
  input[type='search']::-webkit-search-results-decoration {
    display: none;
  }

  .form-control {
    padding-right: tokens.get('input-search-empty-padding-inline-end');

    &:not(:placeholder-shown) {
      padding-right: tokens.get('input-search-filled-padding-inline-end');

      ~ .form-label {
        padding-right: tokens.get('input-search-label-filled-padding-inline-end');
      }

      ~ .delete-button {
        visibility: visible;
        opacity: 1;
      }
    }

    ~ .form-label {
      z-index: 0;
      padding-right: tokens.get('input-search-label-empty-padding-inline-end');
    }
  }

  .delete-button,
  .search-button {
    @include form-input-mx.input-btn();
  }

  .search-button {
    right: tokens.get('search-position-inline-end-icon');

    &:focus-visible {
      @include utilities.focus-style;
    }
  }

  .delete-button {
    right: calc(
      tokens.get('input-sizing-icon', components.$post-text-input) +
        tokens.get('input-search-filled-gap-icon') + tokens.get('search-position-inline-end-icon')
    );
    visibility: hidden;
    opacity: 0;

    &:focus-visible {
      @include utilities.focus-style;
    }
  }
}

